<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.port0.nriedmann.dailymeds.EditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <ImageButton
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/medButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitCenter"
        android:src="@drawable/abc_btn_switch_to_on_mtrl_00001"
        android:onClick="showImageColorPicker"/>

    <TextView
        android:text="@string/med_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/medButton"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:id="@+id/medName" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameText"
        android:layout_below="@+id/medName"
        android:layout_toRightOf="@+id/medButton"
        android:layout_marginLeft="12dp"
        android:text="@string/med_name"/>

    <TextView
        android:layout_marginTop="12dp"
        android:text="@string/med_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/medDesc"
        android:layout_below="@+id/medButton" />
    <EditText
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descText"
        android:layout_below="@+id/medDesc"
        android:layout_marginLeft="12px"
        android:text="@string/med_desc_text"/>


    <TextView
        android:layout_marginTop="6dp"
        android:text="@string/med_take"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/medTake"
        android:layout_below="@+id/descText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_marginLeft="1dp"
        android:text="@string/med_take_text_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/medTakeButton"
        android:layout_below="@+id/medTake"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="showDayTimePickerDialog"/>

    <TextView
        android:layout_marginTop="6dp"
        android:text="@string/med_wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/medWait"
        android:layout_below="@+id/medTakeButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <NumberPicker
        android:layout_marginLeft="6dp"
        android:layout_width="wrap_content"
        android:layout_height="148dp"
        android:id="@+id/medWaitPicker"
        android:layout_below="@+id/medWait"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_marginTop="66dp"
        android:text="min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/medWaitMins"
        android:layout_below="@id/medWait"
        android:layout_toRightOf="@+id/medWaitPicker" />
            </RelativeLayout>
    </ScrollView>

</RelativeLayout>
