<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.v7.cardview="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/medCardView"
    android:layout_margin="2dp"
    android.support.v7.cardview:cardElevation="1.0"
    android.support.v7.cardview:cardCornerRadius="3.0">

    <RelativeLayout
        android:id="@+id/cardBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:layout_margin="0dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:id="@+id/cMedIcon"
            android:src="@drawable/med_icon_3"
            android:background="@color/lime"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/cMedIcon"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:textSize="24dp"
            android:id="@+id/cMedTop"
            android:text="@string/med_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/cMedIcon"
            android:layout_below="@id/cMedTop"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:textSize="18dp"
            android:id="@+id/cMedDesc"
            android:visibility="visible"
            android:text="@string/med_desc"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/cMedIcon"
            android:layout_below="@id/cMedDesc"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:textSize="18dp"
            android:id="@+id/cMedTake"
            android:text="@string/med_take_text_new"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/cMedIcon"
            android:layout_below="@id/cMedTake"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:textSize="18dp"
            android:id="@+id/cMedWait"
            android:text="30 min"/>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_below="@id/cMedWait"
            android:layout_toLeftOf="@id/cMedIcon"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:textSize="16dp"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/cButtonEdit"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_edit_black_24dp"
            android:text="@string/button_edit"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_column="1"
            android:layout_row="0"
            android:textSize="16dp"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/cButtonSilence"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_alarm_on_black_24dp"
            android:text="@string/button_edit"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:textSize="16dp"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/cButtonTaken"
            android:onClick="takenMedClick"
            android:layout_alignParentRight="true"
            android:text="@string/button_taken"/>
        </GridLayout>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_clear_white_24dp"
            android:visibility="gone"
            android:id="@+id/cButtonDelete"
            android:background="?android:attr/selectableItemBackground"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_expand_more_white_24dp"
            android:id="@+id/cButtonExpand"
            android:background="?android:attr/selectableItemBackground"/>


    </RelativeLayout>

</android.support.v7.widget.CardView>